maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: not found: value aMurEst
                         if(aMurEst(x,y)){force(n+1,x-1,y)}
                            ^ShortestPathMaze:8: error: not found: value aMurSud
                         if(aMurSud(x,y)){force(n+1,x,y+1)}}
                            ^ShortestPathMaze:16: error: not enough arguments for method force: (n: Int, x: Int, y: Int)Unit.
Unspecified value parameter y.
  force(X,Y)
       ^